--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -47,6 +47,7 @@
   },
   "devDependencies": {
     "eslint": "^5.3.0",
+    "eslint-config-defaults": "^9.0.0",
     "eslint-config-google": "^0.9.1"
   }
 }
