Caching and service worker update

--- a/src/MSHU.CarWash.PWA/web.config
+++ b/src/MSHU.CarWash.PWA/web.config
@@ -15,6 +15,9 @@
         <remove name="X-Powered-By" />
       </customHeaders>
     </httpProtocol>
+    <staticContent>
+      <clientCache cacheControlMode="UseMaxAge" cacheControlMaxAge="365.00:00:00" cacheControlCustom="immutable" />
+    </staticContent>
   </system.webServer>
 
 </configuration>
