--- a/src/MSHU.CarWash.PWA/appsettings.json
+++ b/src/MSHU.CarWash.PWA/appsettings.json
@@ -1,7 +1,9 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/common/",
-    "ClientId": "6e291d40-2613-4a74-9af5-790eb496a828"
+    "ClientId": "6e291d40-2613-4a74-9af5-790eb496a828",
+    "ClientSecret": "",
+    "GraphResourceId": "https://graph.microsoft.com/"
   },
   "WEBSITE_TIME_ZONE": "Central Europe Standard Time",
   "ConnectionStrings": {
