Microsoft Graph - calendar event
working! :)

--- a/src/MSHU.CarWash.PWA/appsettings.json
+++ b/src/MSHU.CarWash.PWA/appsettings.json
@@ -1,9 +1,7 @@
 {
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/common/",
-    "ClientId": "6e291d40-2613-4a74-9af5-790eb496a828",
-    "ClientSecret": "",
-    "GraphResourceId": "https://graph.microsoft.com/"
+    "ClientId": "6e291d40-2613-4a74-9af5-790eb496a828"
   },
   "WEBSITE_TIME_ZONE": "Central Europe Standard Time",
   "ConnectionStrings": {
