--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -26,7 +26,7 @@
   "coyright": "Copyright (c) 2018 Microsoft",
   "dependencies": {
     "@material-ui/core": "^1.3.1",
-    "@material-ui/icons": "^1.1.0",
+    "@material-ui/icons": "^2.0.0-beta.1",
     "adal-angular": "^1.0.17",
     "ajv": "^6.5.2",
     "applicationinsights-js": "^1.0.18",
