--- a/src/MSHU.CarWash.ClassLibrary/MSHU.CarWash.ClassLibrary.csproj
+++ b/src/MSHU.CarWash.ClassLibrary/MSHU.CarWash.ClassLibrary.csproj
@@ -5,6 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\20180902003120_PushSubscription.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="WebPush" Version="1.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore">
       <HintPath>..\..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.aspnetcore.identity.entityframeworkcore\2.1.1\lib\netstandard2.0\Microsoft.AspNetCore.Identity.EntityFrameworkCore.dll</HintPath>
     </Reference>
