--- a/src/MSHU.CarWash.PWA/appsettings.json
+++ b/src/MSHU.CarWash.PWA/appsettings.json
@@ -3,6 +3,11 @@
     "Instance": "https://login.microsoftonline.com/common/",
     "ClientId": "6e291d40-2613-4a74-9af5-790eb496a828"
   },
+  "Vapid": {
+    "Subject": "https://carwashu.azurewebsites.net/",
+    "PublicKey": "",
+    "PrivateKey": ""
+  },
   "WEBSITE_TIME_ZONE": "Central Europe Standard Time",
   "ConnectionStrings": {
     "Database": "",
