--- a/src/MSHU.CarWash.Functions/settings.json
+++ b/src/MSHU.CarWash.Functions/settings.json
@@ -6,6 +6,9 @@
     "AzureWebJobsDashboard": "",
     "Database": "",
     "StorageAccount": "",
+    "VapidSubject": "https://carwashu.azurewebsites.net/",
+    "VapidPublicKey": "",
+    "VapidPrivateKey": "",
     "FUNCTIONS_WORKER_RUNTIME": "dotnet"
   }
 }
