#1222 Say "You are offline" when clicking on reload but not connected

--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -21,7 +21,8 @@
     "Mark Szabo",
     "Jozsef Vadkerti",
     "Akos Szego",
-    "Tamas Veiland"
+    "Tamas Veiland",
+    "Gabor Kulcsar"
   ],
   "coyright": "Copyright (c) 2018 Microsoft",
   "dependencies": {
