--- a/src/MSHU.CarWash.PWA/appsettings.json
+++ b/src/MSHU.CarWash.PWA/appsettings.json
@@ -5,7 +5,7 @@
   },
   "Vapid": {
     "Subject": "https://carwashu.azurewebsites.net/",
-    "PublicKey": "",
+    "PublicKey": "BMJO6u3_ShlB5x2Nvkdg3CYcTjwo_u_TbfwPRKUft06doQ4BZDsOXr7Rj6sS6m3FkD8kZoLE0bX5_ANWkBAObFw",
     "PrivateKey": ""
   },
   "WEBSITE_TIME_ZONE": "Central Europe Standard Time",
