Swapping calendar service for the new logic app solution

--- a/src/MSHU.CarWash.PWA/appsettings.json
+++ b/src/MSHU.CarWash.PWA/appsettings.json
@@ -8,6 +8,9 @@
     "PublicKey": "BMJO6u3_ShlB5x2Nvkdg3CYcTjwo_u_TbfwPRKUft06doQ4BZDsOXr7Rj6sS6m3FkD8kZoLE0bX5_ANWkBAObFw",
     "PrivateKey": ""
   },
+  "CalendarService": {
+    "LogicAppUrl": ""
+  }, 
   "WEBSITE_TIME_ZONE": "Central Europe Standard Time",
   "ConnectionStrings": {
     "Database": "",
