--- a/src/MSHU.CarWash.Functions/MSHU.CarWash.Functions.csproj
+++ b/src/MSHU.CarWash.Functions/MSHU.CarWash.Functions.csproj
@@ -4,6 +4,14 @@
     <AzureFunctionsVersion>v2</AzureFunctionsVersion>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="emailservice-logicapp.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="emailservice-logicapp.json">
+      <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.1.2" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.1.3" />
