--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -32,6 +32,7 @@
     "ajv": "^6.5.2",
     "applicationinsights-js": "^1.0.18",
     "downloadjs": "^1.4.7",
+    "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-addons-css-transition-group": "^15.6.2",
