--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "**/src/CarWash.Azure.Deployment": true,
     "**/.vs": true,
     "**/bin": true,
-    "**/obj": true
+    "**/obj": true,
+    "**/src/MSHU.CarWash.Web": true
   }
 }
