--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -26,6 +26,7 @@
   ],
   "coyright": "Copyright (c) 2018 Microsoft",
   "dependencies": {
+    "@aspnet/signalr": "^1.0.3",
     "@material-ui/core": "^1.3.1",
     "@material-ui/icons": "^2.0.0-beta.1",
     "adal-angular": "^1.0.17",
@@ -41,7 +42,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.4",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "tslib": "^1.9.3"
   },
   "scripts": {
     "start": "rimraf ./build && react-scripts start",
