--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ PublishProfiles
 /src/MSHU.CarWash.Web/App_Data/MSHUCarWashContext-20151207160057.mdf
 /src/MSHU.CarWash.Web/App_Data/MSHUCarWashContext-20151207160057_log.ldf
 
-src/MSHU\.CarWash\.PWA/appsettings\.Development\.json
+*/*/appsettings\.Development\.json
 
 *.pfx
 
