--- a/src/MSHU.CarWash.Bot/Properties/launchSettings.json
+++ b/src/MSHU.CarWash.Bot/Properties/launchSettings.json
@@ -8,7 +8,7 @@
     }
   },
   "profiles": {
-    "BasicBot": {
+    "CarWashBot": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
