--- a/src/MSHU.CarWash.Bot/Properties/launchSettings.json
+++ b/src/MSHU.CarWash.Bot/Properties/launchSettings.json
@@ -10,7 +10,7 @@
   "profiles": {
     "CarWashBot": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
