--- a/src/MSHU.CarWash.Bot/appsettings.json
+++ b/src/MSHU.CarWash.Bot/appsettings.json
@@ -1,4 +1,7 @@
 {
   "botFilePath": "./carwashubot.bot",
-  "botFileSecret": ""
+  "botFileSecret": "",
+  "ApplicationInsights": {
+    "InstrumentationKey": ""
+  }
 }
