--- a/src/MSHU.CarWash.PWA/MSHU.CarWash.PWA.csproj
+++ b/src/MSHU.CarWash.PWA/MSHU.CarWash.PWA.csproj
@@ -1,19 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
     <TypeScriptToolsVersion>Latest</TypeScriptToolsVersion>
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
-    <Version>0.1.0</Version>
+    <Version>2.0.0</Version>
     <PackageProjectUrl>https://jovadker.visualstudio.com/CarWash</PackageProjectUrl>
     <Company>Microsoft</Company>
     <Copyright>Copyright © 2018 Microsoft</Copyright>
-    <PackageTags>PWA, React, aspnetcore2.1</PackageTags>
+    <PackageTags>PWA, React, aspnetcore2.2</PackageTags>
     <RepositoryType>git</RepositoryType>
-    <RepositoryUrl>https://jovadker.visualstudio.com/_git/CarWash</RepositoryUrl>
+    <RepositoryUrl>https://github.com/mark-szabo/carwash</RepositoryUrl>
     <Product>CarWash</Product>
     <Authors>Mark Szabo, Jozsef Vadkerti, Akos Szego, Tamas Veiland</Authors>
     <Description>This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services.</Description>
@@ -24,22 +25,22 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>bin\Debug\netcoreapp2.1\MSHU.CarWash.PWA.xml</DocumentationFile>
+    <DocumentationFile>bin\Debug\netcoreapp2.2\MSHU.CarWash.PWA.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="EPPlus" Version="4.5.2.1"><NoWarn>NU1701</NoWarn></PackageReference>
-    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.4.1" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.5.1" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
-    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="2.1.1" />
-    <PackageReference Include="Microsoft.Graph" Version="1.11.0" />
-    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="3.19.8" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.4" />
-    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
-    <PackageReference Include="System.Drawing.Common" Version="4.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Graph" Version="1.12.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="4.4.2" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.1" />
     <PackageReference Include="WebPush" Version="1.0.11" />
-    <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
   </ItemGroup>
 
   <ItemGroup>
