IIS InProcess hosting is not able to find npm -> OutOfProcess
More info: https://github.com/aspnet/AspNetCore/issues/5263

--- a/src/MSHU.CarWash.PWA/web.config
+++ b/src/MSHU.CarWash.PWA/web.config
@@ -7,7 +7,7 @@
       <remove name="aspNetCore" />
       <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
     </handlers>
-    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="InProcess">
+    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="OutOfProcess">
       <environmentVariables>
         <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44340" />
         <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
