Configuring Snapshot debugger for the API

--- a/src/MSHU.CarWash.PWA/appsettings.json
+++ b/src/MSHU.CarWash.PWA/appsettings.json
@@ -10,7 +10,7 @@
   },
   "CalendarService": {
     "LogicAppUrl": ""
-  }, 
+  },
   "WEBSITE_TIME_ZONE": "Central Europe Standard Time",
   "ConnectionStrings": {
     "Database": "",
@@ -24,5 +24,18 @@
   "AllowedHosts": "*",
   "ApplicationInsights": {
     "InstrumentationKey": "e73dbd9a-80fe-4272-a698-1f74de141c67"
+  },
+  "SnapshotCollectorConfiguration": {
+    "IsEnabledInDeveloperMode": false,
+    "ThresholdForSnapshotting": 1,
+    "MaximumSnapshotsRequired": 3,
+    "MaximumCollectionPlanSize": 50,
+    "ReconnectInterval": "00:15:00",
+    "ProblemCounterResetInterval": "1.00:00:00",
+    "SnapshotsPerTenMinutesLimit": 1,
+    "SnapshotsPerDayLimit": 30,
+    "SnapshotInLowPriorityThread": true,
+    "ProvideAnonymousTelemetry": true,
+    "FailedRequestLimit": 3
   }
 }
