Downgrading API to ASP.NET Core 2.1
Azure AppService was throwing an npm error all the time which I was not able to fix

--- a/src/MSHU.CarWash.PWA/web.config
+++ b/src/MSHU.CarWash.PWA/web.config
@@ -5,13 +5,10 @@
   <system.webServer>
     <handlers>
       <remove name="aspNetCore" />
-      <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
+      <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModule" resourceType="Unspecified" />
     </handlers>
-    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout" hostingModel="OutOfProcess">
-      <environmentVariables>
-        <environmentVariable name="ASPNETCORE_HTTPS_PORT" value="44340" />
-        <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
-      </environmentVariables>
+    <aspNetCore processPath="%LAUNCHER_PATH%" arguments="%LAUNCHER_ARGS%" stdoutLogEnabled="false" stdoutLogFile=".\logs\stdout">
+      <environmentVariables />
     </aspNetCore>
     <httpProtocol>
       <customHeaders>
