API: limiting blocker's length to the maximum of one month
and a small user-requested UI change

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,7 @@
     "**/bin": true,
     "**/obj": true,
     "**/src/MSHU.CarWash.Web": true
-  }
+  },
+  "azureFunctions.projectLanguage": "C#",
+  "azureFunctions.projectRuntime": "~2"
 }
