--- a/src/MSHU.CarWash.Bot/MSHU.CarWash.Bot.csproj
+++ b/src/MSHU.CarWash.Bot/MSHU.CarWash.Bot.csproj
@@ -13,6 +13,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Bot.Builder.Community.Dialogs.FormFlow" Version="1.0.173" />
     <PackageReference Include="Microsoft.AdaptiveCards" Version="0.5.1" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.5.1" />
     <PackageReference Include="Microsoft.ApplicationInsights.SnapshotCollector" Version="1.3.2" />
