Tinkering with infinite-scrolling - no success

--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -39,9 +39,10 @@
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.6.3",
     "react-infinite-calendar": "^2.3.1",
+    "react-infinite-scroller": "^1.2.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1",
+    "react-scripts": "^2.1.3",
     "rimraf": "^2.6.2",
     "tslib": "^1.9.3"
   },
