--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -33,16 +33,18 @@
     "ajv": "^6.5.5",
     "applicationinsights-js": "^1.0.20",
     "downloadjs": "^1.4.7",
+    "memoize-one": "^5.0.0",
     "moment": "^2.22.2",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.6.3",
     "react-infinite-calendar": "^2.3.1",
-    "react-infinite-scroller": "^1.2.4",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
+    "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.5.0",
     "rimraf": "^2.6.2",
     "tslib": "^1.9.3"
   },
