--- a/src/MSHU.CarWash.PWA/ClientApp/package.json
+++ b/src/MSHU.CarWash.PWA/ClientApp/package.json
@@ -43,8 +43,7 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
-    "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.5.0",
+    "react-virtualized": "^9.21.0",
     "rimraf": "^2.6.2",
     "tslib": "^1.9.3"
   },
