Azure Key Vault integration

--- a/CarWash.PWA/appsettings.json
+++ b/CarWash.PWA/appsettings.json
@@ -1,30 +1,32 @@
 {
+  "KeyVault": {
+    "BaseUrl": "",
+    "SecretNames": {
+      "AzureAdClientSecret": "",
+      "SqlDatabase": "",
+      "StorageAccount": "",
+      "VapidPrivateKey": ""
+    }
+  },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/common/",
-    "ClientId": "6e291d40-2613-4a74-9af5-790eb496a828"
+    "ClientId": ""
   },
   "Vapid": {
-    "Subject": "https://carwashu.azurewebsites.net/",
-    "PublicKey": "BMJO6u3_ShlB5x2Nvkdg3CYcTjwo_u_TbfwPRKUft06doQ4BZDsOXr7Rj6sS6m3FkD8kZoLE0bX5_ANWkBAObFw",
-    "PrivateKey": ""
+    "Subject": "",
+    "PublicKey": ""
   },
   "CalendarService": {
     "LogicAppUrl": ""
   },
   "WEBSITE_TIME_ZONE": "Central Europe Standard Time",
-  "ConnectionStrings": {
-    "Database": "",
-    "StorageAccount": ""
-  },
+  "ConnectionStrings": {},
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
     }
   },
   "AllowedHosts": "*",
-  "ApplicationInsights": {
-    "InstrumentationKey": "e73dbd9a-80fe-4272-a698-1f74de141c67"
-  },
   "SnapshotCollectorConfiguration": {
     "IsEnabledInDeveloperMode": false,
     "ThresholdForSnapshotting": 1,
