Outsourcing app configs to appsettings

--- a/CarWash.PWA/appsettings.json
+++ b/CarWash.PWA/appsettings.json
@@ -1,12 +1,36 @@
 {
-  "KeyVault": {
-    "BaseUrl": "",
-    "SecretNames": {
-      "AzureAdClientSecret": "",
-      "SqlDatabase": "",
-      "StorageAccount": "",
-      "VapidPrivateKey": ""
+  "Slots": [
+    {
+      "StartTime": 8,
+      "EndTime": 11,
+      "Capacity": 12
+    },
+    {
+      "StartTime": 11,
+      "EndTime": 14,
+      "Capacity": 12
+    },
+    {
+      "StartTime": 14,
+      "EndTime": 17,
+      "Capacity": 12
     }
+  ],
+  "Companies": [
+    {
+      "Name": "carwash",
+      "TenantId": "",
+      "DailyLimit": 0
+    }
+  ],
+  "Reservation": {
+    "TimeUnit": 12,
+    "UserConcurrentReservationLimit": 2,
+    "MinutesToAllowReserveInPast": 120,
+    "HoursAfterCompanyLimitIsNotChecked": 11
+  },
+  "KeyVault": {
+    "BaseUrl": ""
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/common/",
@@ -20,7 +44,6 @@
     "LogicAppUrl": ""
   },
   "WEBSITE_TIME_ZONE": "Central Europe Standard Time",
-  "ConnectionStrings": {},
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
