Enabling integration for 3rd party services: Authentication

--- a/CarWash.PWA/appsettings.json
+++ b/CarWash.PWA/appsettings.json
@@ -34,7 +34,8 @@
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/common/",
-    "ClientId": ""
+    "ClientId": "",
+    "AuthorizedApplications": []
   },
   "Vapid": {
     "Subject": "",
