--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,7 @@ steps:
     inputs:
       command: test
       projects: "**/*.Tests/*.csproj"
-      arguments: "--configuration $(buildConfiguration)"
+      arguments: "--configuration $(buildConfiguration) --collect 'Code coverage'"
 
   - task: DotNetCoreCLI@2
     displayName: "Publish build artifacts"
