.well-known endpoint

--- a/CarWash.PWA/appsettings.json
+++ b/CarWash.PWA/appsettings.json
@@ -23,6 +23,7 @@
       "DailyLimit": 0
     }
   ],
+  "Garages": [],
   "Reservation": {
     "TimeUnit": 12,
     "UserConcurrentReservationLimit": 2,
