--- a/CarWash.Bot/CarWash.Bot.csproj
+++ b/CarWash.Bot/CarWash.Bot.csproj
@@ -6,6 +6,7 @@
     <UserSecretsId>464d5f9c-25f9-4dbc-8a78-5d4896584026</UserSecretsId>
     <ApplicationInsightsResourceId>/subscriptions/a984fd43-e460-42c7-957c-a023cf7f8241/resourcegroups/carwash/providers/microsoft.insights/components/carwashubot4fj5z2</ApplicationInsightsResourceId>
     <ApplicationInsightsAnnotationResourceId>/subscriptions/a984fd43-e460-42c7-957c-a023cf7f8241/resourcegroups/carwash/providers/microsoft.insights/components/carwashubot4fj5z2</ApplicationInsightsAnnotationResourceId>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
