--- a/CarWash.PWA/appsettings.json
+++ b/CarWash.PWA/appsettings.json
@@ -33,6 +33,12 @@
   "KeyVault": {
     "BaseUrl": ""
   },
+  "ServiceBusQueues": {
+    "BotDropoffReminderQueue": "bot-dropoff-reminder",
+    "BotWashStartedQueue": "bot-wash-started",
+    "BotWashCompletedQueue": "bot-wash-completed",
+    "BotCarWashCommentLeftQueue": "bot-carwash-comment-left"
+  },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/common/",
     "ClientId": "",
