Proactive messages: was-started & carwash-comment-left

--- a/CarWash.Bot/appsettings.json
+++ b/CarWash.Bot/appsettings.json
@@ -4,6 +4,12 @@
   "ApplicationInsights": {
     "InstrumentationKey": ""
   },
+  "ServiceBusQueues": {
+    "BotDropoffReminderQueue": "bot-dropoff-reminder",
+    "BotWashStartedQueue": "bot-wash-started",
+    "BotWashCompletedQueue": "bot-wash-completed",
+    "BotCarWashCommentLeftQueue": "bot-carwash-comment-left"
+  },
   "SnapshotCollectorConfiguration": {
     "IsEnabledInDeveloperMode": false,
     "ThresholdForSnapshotting": 1,
