Bot vehicle arrived notification message

--- a/CarWash.Bot/appsettings.json
+++ b/CarWash.Bot/appsettings.json
@@ -8,7 +8,8 @@
     "BotDropoffReminderQueue": "bot-dropoff-reminder",
     "BotWashStartedQueue": "bot-wash-started",
     "BotWashCompletedQueue": "bot-wash-completed",
-    "BotCarWashCommentLeftQueue": "bot-carwash-comment-left"
+    "BotCarWashCommentLeftQueue": "bot-carwash-comment-left",
+    "BotVehicleArrivedNotificationQueue": "bot-vehicle-arrived-notification"
   },
   "SnapshotCollectorConfiguration": {
     "IsEnabledInDeveloperMode": false,
