Carpet cleaning config

--- a/CarWash.PWA/appsettings.json
+++ b/CarWash.PWA/appsettings.json
@@ -28,7 +28,8 @@
     "TimeUnit": 12,
     "UserConcurrentReservationLimit": 2,
     "MinutesToAllowReserveInPast": 120,
-    "HoursAfterCompanyLimitIsNotChecked": 11
+    "HoursAfterCompanyLimitIsNotChecked": 11,
+    "CarpetCleaningMultiplier": 2
   },
   "KeyVault": {
     "BaseUrl": ""
