--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ CarWash\.PWA\.Windows/bld/
 CarWash\.PWA\.Windows/_pkginfo\.txt
 
 TestResults/
+CarWash.PWA/Properties/serviceDependencies.mimosonk.json
