Moving Companies from app configuration to database

--- a/CarWash.ClassLibrary/CarWash.ClassLibrary.csproj
+++ b/CarWash.ClassLibrary/CarWash.ClassLibrary.csproj
@@ -16,6 +16,11 @@
     <PackageReference Include="Azure.Storage.Common" Version="12.21.1" />
     <PackageReference Include="Azure.Storage.Queues" Version="12.20.1" />
     <PackageReference Include="Microsoft.ApplicationInsights" Version="2.22.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.9.2" />
     <PackageReference Include="Microsoft.Graph" Version="5.61.0" />
     <PackageReference Include="WebPush" Version="1.0.12" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.10" />
