--- a/CarWash.PWA/ClientApp/package.json
+++ b/CarWash.PWA/ClientApp/package.json
@@ -57,11 +57,12 @@
         "eject": "react-scripts eject"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "babel-eslint": "^10.1.0",
-        "eslint": "^9.9.0",
+        "eslint": "^8.57.1",
         "eslint-config-defaults": "^9.0.0",
-        "prettier-eslint": "^16.3.0",
-        "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+        "eslint-plugin-import": "^2.31.0",
+        "prettier-eslint": "^16.3.0"
     },
     "browserslist": [
         ">0.2%",
