Service types through configuration WIP

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,7 +40,7 @@
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome against localhost",
-      "url": "http://localhost:8080",
+      "url": "https://localhost:51145",
       "webRoot": "${workspaceFolder}"
     }
   ]
