Service types to appsettings

--- a/CarWash.PWA/appsettings.json
+++ b/CarWash.PWA/appsettings.json
@@ -16,14 +16,189 @@
       "Capacity": 12
     }
   ],
-  "Companies": [
+  "Garages": [],
+  "Services": [
     {
-      "Name": "carwash",
-      "TenantId": "",
-      "DailyLimit": 0
+      "id": 0,
+      "name": "exterior",
+      "group": "Basics",
+      "description": null,
+      "timeInMinutes": 12,
+      "price": 6311,
+      "priceMpv": 7889,
+      "hidden": false
+    },
+    {
+      "id": 1,
+      "name": "interior",
+      "group": "Basics",
+      "description": null,
+      "timeInMinutes": 12,
+      "price": 3610,
+      "priceMpv": 5406,
+      "hidden": false
+    },
+    {
+      "id": 2,
+      "name": "carpet",
+      "group": "Basics",
+      "description": "whole carpet cleaning, including all the seats",
+      "timeInMinutes": 24,
+      "price": -1,
+      "priceMpv": -1,
+      "hidden": false
+    },
+    {
+      "id": 3,
+      "name": "spot cleaning",
+      "group": "Extras",
+      "description": "partial cleaning of the carpet, only where it is needed (eg. when something is spilled in the car)",
+      "timeInMinutes": 0,
+      "price": 7606,
+      "priceMpv": 7606,
+      "hidden": false
+    },
+    {
+      "id": 4,
+      "name": "vignette removal",
+      "group": "Extras",
+      "description": "eg. highway vignettes on the windscreen",
+      "timeInMinutes": 0,
+      "price": 1008,
+      "priceMpv": 1008,
+      "hidden": false
+    },
+    {
+      "id": 5,
+      "name": "polishing",
+      "group": "Extras",
+      "description": "for small scratches",
+      "timeInMinutes": 0,
+      "price": 9679,
+      "priceMpv": 9679,
+      "hidden": false
+    },
+    {
+      "id": 6,
+      "name": "AC cleaning 'ozon'",
+      "group": "AC",
+      "description": "disinfects molecules with ozone",
+      "timeInMinutes": 0,
+      "price": 10091,
+      "priceMpv": 10091,
+      "hidden": false
+    },
+    {
+      "id": 7,
+      "name": "AC cleaning 'bomba'",
+      "group": "AC",
+      "description": "blowing chemical spray in the AC system",
+      "timeInMinutes": 0,
+      "price": 13822,
+      "priceMpv": 13822,
+      "hidden": false
+    },
+    {
+      "id": 8,
+      "name": "bug removal",
+      "group": "Extras",
+      "description": "we'll add this if it's needed",
+      "timeInMinutes": 0,
+      "price": 1732,
+      "priceMpv": 1732,
+      "hidden": false
+    },
+    {
+      "id": 9,
+      "name": "wheel cleaning",
+      "group": "Extras",
+      "description": "we'll add this if it's needed",
+      "timeInMinutes": 0,
+      "price": 2073,
+      "priceMpv": 2073,
+      "hidden": false
+    },
+    {
+      "id": 10,
+      "name": "tire care",
+      "group": "Extras",
+      "description": "we'll add this if it's needed",
+      "timeInMinutes": 0,
+      "price": 1732,
+      "priceMpv": 1732,
+      "hidden": false
+    },
+    {
+      "id": 11,
+      "name": "leather care",
+      "group": "Extras",
+      "description": "we'll add this if it's needed",
+      "timeInMinutes": 0,
+      "price": 17283,
+      "priceMpv": 17283,
+      "hidden": false
+    },
+    {
+      "id": 12,
+      "name": "plastic care",
+      "group": "Extras",
+      "description": "we'll add this if it's needed",
+      "timeInMinutes": 0,
+      "price": 9149,
+      "priceMpv": 9149,
+      "hidden": false
+    },
+    {
+      "id": 13,
+      "name": "prewash",
+      "group": "Extras",
+      "description": "we'll add this if it's needed",
+      "timeInMinutes": 0,
+      "price": 1732,
+      "priceMpv": 1732,
+      "hidden": false
+    },
+    {
+      "id": 14,
+      "name": "pet hair removal",
+      "group": "Extras",
+      "description": "we'll add this if it's needed",
+      "timeInMinutes": 0,
+      "price": 5080,
+      "priceMpv": 5080,
+      "hidden": false
+    },
+    {
+      "id": 15,
+      "name": "bike rack",
+      "group": "Extras",
+      "description": "we'll add this if it's needed",
+      "timeInMinutes": 0,
+      "price": 2332,
+      "priceMpv": 2332,
+      "hidden": false
+    },
+    {
+      "id": 16,
+      "name": "roof box",
+      "group": "Extras",
+      "description": "we'll add this if it's needed",
+      "timeInMinutes": 0,
+      "price": 6801,
+      "priceMpv": 6801,
+      "hidden": false
+    },
+    {
+      "id": 17,
+      "name": "child seat",
+      "group": "Extras",
+      "description": "we'll add this if it's needed",
+      "timeInMinutes": 0,
+      "price": 8744,
+      "priceMpv": 8744,
+      "hidden": false
     }
   ],
-  "Garages": [],
   "Reservation": {
     "TimeUnit": 12,
     "UserConcurrentReservationLimit": 2,
@@ -39,6 +214,9 @@
     "BotWashStartedQueue": "bot-wash-started",
     "BotWashCompletedQueue": "bot-wash-completed",
     "BotCarWashCommentLeftQueue": "bot-carwash-comment-left"
+  },
+  "ConnectionStrings": {
+    "BaseUrl": "https://mimosonk.hu"
   },
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/common/",
