Fixing and upgrading Azure Functions

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,14 @@ CarWash\.PWA\.Windows/_pkginfo\.txt
 
 TestResults/
 CarWash.PWA/Properties/serviceDependencies.mimosonk.json
+
+# Azure Functions artifacts
+bin
+obj
+appsettings.json
+local.settings.json
+
+# Azurite artifacts
+__blobstorage__
+__queuestorage__
+__azurite_db*__.json
