--- a/CarWash.Functions/settings.json
+++ b/CarWash.Functions/settings.json
@@ -4,12 +4,12 @@
     "Environment": "Production",
     "AzureWebJobsStorage": "",
     "AzureWebJobsDashboard": "",
-    "Database": "",
-    "StorageAccount": "",
-    "VapidSubject": "https://carwashu.azurewebsites.net/",
-    "VapidPublicKey": "",
-    "VapidPrivateKey": "",
+    "ConnectionStrings:SqlDatabase": "",
+    "ConnectionStrings:StorageAccount": "",
+    "Vapid:Subject": "https://carwashu.azurewebsites.net/",
+    "Vapid:PublicKey": "",
+    "Vapid:PrivateKey": "",
     "WEBSITE_TIME_ZONE": "Central Europe Standard Time",
-    "FUNCTIONS_WORKER_RUNTIME": "dotnet"
+    "FUNCTIONS_WORKER_RUNTIME": "dotnet-isolated"
   }
 }
