--- a/CarWash.PWA/ClientApp/package.json
+++ b/CarWash.PWA/ClientApp/package.json
@@ -1,6 +1,6 @@
 {
     "name": "carwash_pwa",
-    "version": "2.3.11",
+    "version": "2.3.12",
     "private": true,
     "description": "This app is intended to help employees working in Graphisoft park (Budapest, Hungary) reserve car washing services.",
     "repository": {
@@ -11,7 +11,7 @@
     "keywords": [
         "pwa",
         "react",
-        "aspnetcore2.2"
+        "aspnetcore"
     ],
     "author": {
         "name": "Microsoft",
@@ -59,10 +59,14 @@
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+        "@eslint/js": "^9.17.0",
         "babel-eslint": "^10.1.0",
         "eslint": "^8.57.1",
         "eslint-config-defaults": "^9.0.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.31.0",
+        "globals": "^15.14.0",
+        "prettier": "^3.4.2",
         "prettier-eslint": "^16.3.0"
     },
     "browserslist": [
