Add Azure CDN purge step to GitHub Actions workflow

--- a/.github/workflows/mimosonk.yml
+++ b/.github/workflows/mimosonk.yml
@@ -6,6 +6,9 @@ on:
 env:
     AZURE_WEBAPP_NAME: mimosonk
     AZURE_WEBAPP_PACKAGE_PATH: CarWash.PWA\publish
+    AZURE_RESOURCE_GROUP: rg-carwash-mimosonk-prod
+    AZURE_CDN_PROFILE_NAME: cdnp-carwash-mimosonk-prod
+    AZURE_CDN_ENDPOINT: cdne-carwash-mimosonk-prod
     CONFIGURATION: Release
     DOTNET_CORE_VERSION: 8.0.x
     WORKING_DIRECTORY: CarWash.PWA
@@ -57,3 +60,16 @@ jobs:
                   app-name: ${{ env.AZURE_WEBAPP_NAME }}
                   publish-profile: ${{ secrets.mimosonk_E838 }}
                   package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+            - name: Azure service principal login
+              uses: azure/login@v1
+              with:
+                  creds: ${{ secrets.AZURE_CREDENTIALS }}
+            - name: Purge Azure CDN endpoint
+              run: az cdn endpoint purge \
+                  --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
+                  --profile-name ${{ env.AZURE_CDN_PROFILE_NAME }} \
+                  --name ${{ env.AZURE_CDN_ENDPOINT }} \
+                  --content-paths '/*' '/sw.js' '/api/.well-known/configuration'
+                  --no-wait
+            - name: Azure service principal logout
+              run: az logout
