Fix GitHub Actions

--- a/.github/workflows/mimosonk.yml
+++ b/.github/workflows/mimosonk.yml
@@ -67,18 +67,20 @@ jobs:
               with:
                   creds: ${{ secrets.AZURE_CREDENTIALS }}
             - name: Update app configuration VERSION
-              run: az appconfig kv set \
-                  --name ${{ env.AZURE_APPCONFIG_NAME }} \
-                  --auth-mode login \
-                  --endpoint ${{ env.AZURE_APPCONFIG_ENDPOINT }} \
-                  --key VERSION \
-                  --value ${{ steps.build_number.outputs.VERSION }} \
+              run: |
+                  az appconfig kv set
+                  --name ${{ env.AZURE_APPCONFIG_NAME }}
+                  --auth-mode login
+                  --endpoint ${{ env.AZURE_APPCONFIG_ENDPOINT }}
+                  --key VERSION
+                  --value ${{ steps.build_number.outputs.VERSION }}
                   --yes
             - name: Purge Azure CDN endpoint
-              run: az cdn endpoint purge \
-                  --resource-group ${{ env.AZURE_RESOURCE_GROUP }} \
-                  --profile-name ${{ env.AZURE_CDN_PROFILE_NAME }} \
-                  --name ${{ env.AZURE_CDN_ENDPOINT }} \
+              run: |
+                  az cdn endpoint purge
+                  --resource-group ${{ env.AZURE_RESOURCE_GROUP }}
+                  --profile-name ${{ env.AZURE_CDN_PROFILE_NAME }}
+                  --name ${{ env.AZURE_CDN_ENDPOINT }}
                   --content-paths '/' '/sw.js' '/api/.well-known/configuration'
                   --no-wait
             - name: Azure service principal logout
